DIAC-2405 Springboot 3 Java 21 upgrades (#3172)
* springboot 2.x -> 3.0

* springboot 3.0 -> 3.1

* springboot 3.1 -> 3.2

* springboot 3.2 -> 3.4

* improving long test

* springboot 3.4 -> 3.5

* java 17 -> 21

* int test fix

* java upgrade

* build gradle clean up

* removing sleeps

* contract test fixes

* sonar fixes

* bumping ES

* fix

* fixing dependency check and CVEs

* setting max retry in functional test

* moving package json out of root to avoid dependency check picking it up

* unbumping org.owasp.dependencycheck

* fixing cve and suppressing false positive

* retry fix

* possible em fix

* bumping uk.gov.hmcts.java

* functional fix

* improving CcdScenarioRunnerTest

* fix to scenario runner

* fix to scenario runner

* owasp bump

* testing no wa on PR

* equality fix

* setting flags for wa in preview properly

* testing no TES on PR

* bumping tomcat globally

* removing debug logging

* pointing to other springboot 3 java 21 PRs

* fix

* fix

* fix commondata point

* netty bump

* removing redundant suppressions and logs

* fixing wa tag

* retry loop on import to check that camunda is up else wait then try again before importing

* parallel test execution test

* parallel test execution test

* default functional to concurrent

* Revert "default functional to concurrent"

This reverts commit ad29b6e542e03ed9fdffeb10acdd5eaa26e3f88a.

* default functional to concurrent by class

* Revert "default functional to concurrent by class"

This reverts commit 76fb9c644cfce1e14a4c5e9eae4a85ac9e129abb.

* fixes post master merge

* fix

* fix

* checkstyle fix

* test fix

* test fix

* fixing concurrent issue fujnctonal

* fix

* fix for em preview

* Bumping chart version/ fixing aliases

* fix for em preview?

* adding retry loop back

* removing preview pointing

* fixing possibly caching issue

---------

Co-authored-by: hmcts-jenkins-d-to-i <62423932+hmcts-jenkins-d-to-i[bot]@users.noreply.github.com>