@@ -62,7 +62,7 @@ class RemoveStatutoryTimeframe24WeeksTest extends SpringBootIntegrationTest impl
 
         Optional<List<IdValue<CaseNote>>> caseNotes = response.getAsylumCase().read(CASE_NOTES);
 
-        CaseNote caseNote = caseNotes.get().get(0).getValue();
+        CaseNote caseNote = caseNotes.get().getFirst().getValue();
 
         assertThat(caseNotes.get()).hasSize(1);
         assertThat(caseNote.getUser()).isEqualTo("Case Officer");
@@ -73,9 +73,9 @@ class RemoveStatutoryTimeframe24WeeksTest extends SpringBootIntegrationTest impl
         List<IdValue<StatutoryTimeframe24WeeksHistory>> statutoryTimeframe24WeekHistory = statutoryTimeframe24Weeks.get().getHistory();
 
         assertThat(statutoryTimeframe24WeekHistory).hasSize(1);
-        assertThat(statutoryTimeframe24WeekHistory.get(0).getValue().getUser()).isEqualTo("Case Officer");
-        assertThat(statutoryTimeframe24WeekHistory.get(0).getValue().getStatus()).isEqualTo(YesOrNo.NO);
-        assertThat(statutoryTimeframe24WeekHistory.get(0).getValue().getReason()).isEqualTo(reason);
+        assertThat(statutoryTimeframe24WeekHistory.getFirst().getValue().getUser()).isEqualTo("Case Officer");
+        assertThat(statutoryTimeframe24WeekHistory.getFirst().getValue().getStatus()).isEqualTo(YesOrNo.NO);
+        assertThat(statutoryTimeframe24WeekHistory.getFirst().getValue().getReason()).isEqualTo(reason);
 
         assertThat(response.getAsylumCase().read(XUI_BANNER_TEXT).get()).isEqualTo("some text");
         assertThat(response.getAsylumCase().read(STF_24W_CURRENT_STATUS_AUTO_GENERATED, YesOrNo.class).get()).isEqualTo(YesOrNo.NO);
