@@ -217,7 +217,7 @@ class UploadAdditionalEvidenceHandlerTest {
         List<IdValue<DocumentWithMetadata>> actualExistingAdditionalDocuments =
             existingAdditionalEvidenceDocumentsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, actualExistingAdditionalDocuments.size());
 
@@ -258,7 +258,7 @@ class UploadAdditionalEvidenceHandlerTest {
         List<IdValue<DocumentWithMetadata>> actualExistingAdditionalDocuments =
             existingAdditionalEvidenceDocumentsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, actualExistingAdditionalDocuments.size());
 
